--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>chapter2</module>
         <module>chapter4</module>
+        <module>chapter5</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
