--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>chapter2</module>
         <module>chapter4</module>
         <module>chapter5</module>
+        <module>chapter6</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
