--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>chapter4</module>
         <module>chapter5</module>
         <module>chapter6</module>
+        <module>chapter7</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
