--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>chapter5</module>
         <module>chapter6</module>
         <module>chapter7</module>
+        <module>chapter8</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
