--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>chapter6</module>
         <module>chapter7</module>
         <module>chapter8</module>
+        <module>chapter10</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
