--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>chapter7</module>
         <module>chapter8</module>
         <module>chapter10</module>
+        <module>chapter11</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
