--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>chapter8</module>
         <module>chapter10</module>
         <module>chapter11</module>
+        <module>chapter12</module>
+        <module>utils</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
@@ -30,11 +32,11 @@
                 <artifactId>netty-all</artifactId>
                 <version>${netty.version}</version>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>nia</groupId>-->
-                <!--<artifactId>utils</artifactId>-->
-                <!--<version>2.0-SNAPSHOT</version>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>nia</groupId>
+                <artifactId>utils</artifactId>
+                <version>2.0-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -47,10 +49,10 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>nia</groupId>-->
-            <!--<artifactId>utils</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>nia</groupId>
+            <artifactId>utils</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
