--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>chapter12</module>
         <module>utils</module>
         <module>chapter9</module>
+        <module>chapter13</module>
     </modules>
     <properties>
         <junit.version>4.11</junit.version>
